@@ -16,6 +16,7 @@ systemd (208-6ubuntu1) UNRELEASED; urgency=medium
       supported them in Ubuntu.
     - Keep our much simpler udev maintainer scripts (all platforms must
       support udev, no debconf).
+    - Add udev Apport package hook.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 26 Apr 2014 17:29:00 +0200
 
